[project]
name = "langchain-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.3"
dependencies = [
    "mypy>=1.16.0",
    "pre-commit>=4.2.0",
]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = false
disallow_untyped_calls = false

[tool.ruff]
select = ["F", "E", "W", "I"]  # "D" を削除してdocstringチェックを無効化
line-length = 88

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]