[project]
name = "langchain-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.3"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=0.3.25",
    "langchain-core>=0.3.65",
    "langchain-openai>=0.3.22",
    "pre-commit>=4.2.0",
    "pydantic>=2.11.5",
    "chromadb>=0.4.22",
    "beautifulsoup4>=4.12.0",
    "bs4>=0.0.2",
    "faiss-cpu>=1.7.4",
    "ruff>=0.11.13",
]

[tool.ruff]
# 基本設定
target-version = "py38"
line-length = 88
indent-width = 4
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
select = ["E4", "E7", "E9", "F", "E501"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
known-first-party = ["langchain", "langchain_community", "langchain_openai", "langchain_text_splitters"]
known-third-party = ["faiss", "tavily"]
section-order = ["FUTURE", "STDLIB", "THIRD_PARTY", "FIRST_PARTY", "LOCAL_FOLDER"]
lines-after-imports = 2
lines-between-types = 1
force-single-line = false
force-wrap-aliases = false
combine-as-imports = true
force-sort-within-sections = true

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"